server: added memorylane 'spotlight on $year'
